--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -1,32 +1,101 @@
 {
-  "http": {
-    "port": 8080
-  },
-  "database": {
-    "host": "localhost",
-    "port": 5432,
-    "database": "foxya_coin",
-    "user": "postgres",
-    "password": "postgres",
-    "pool_size": 10,
-    "idle_timeout": 60,
-    "pool_cleaner_period": 60
-  },
-  "jwt": {
-    "secret": "change-me-in-production-please",
-    "expiresInSeconds": 86400
-  },
-  "blockchain": {
-    "tron": {
-      "fullNode": "https://api.trongrid.io",
-      "solidityNode": "https://api.trongrid.io",
-      "eventServer": "https://api.trongrid.io",
-      "apiKey": ""
+  "env": "local",
+  "local": {
+    "http": {
+      "port": 8080
+    },
+    "database": {
+      "host": "localhost",
+      "port": 5432,
+      "database": "coin_system_cloud",
+      "user": "an",
+      "password": "1234",
+      "pool_size": 10
+    },
+    "jwt": {
+      "secret": "your-jwt-secret-key-for-foxya-coin-service",
+      "access_token_expire_minutes": 30,
+      "refresh_token_expire_minutes": 14400
+    },
+    "blockchain": {
+      "tron": {
+        "fullNode": "https://api.trongrid.io",
+        "solidityNode": "https://api.trongrid.io",
+        "eventServer": "https://api.trongrid.io",
+        "apiKey": ""
+      }
+    },
+    "redis": {
+      "host": "localhost",
+      "port": 6379,
+      "password": ""
     }
   },
-  "redis": {
-    "host": "localhost",
-    "port": 6379,
-    "password": ""
+  "test": {
+    "http": {
+      "port": 8089
+    },
+    "database": {
+      "host": "localhost",
+      "port": 5432,
+      "database": "coin_system_cloud",
+      "user": "an",
+      "password": "1234",
+      "pool_size": 5
+    },
+    "jwt": {
+      "secret": "test-secret-key-for-foxya-coin-service",
+      "access_token_expire_minutes": 30,
+      "refresh_token_expire_minutes": 14400
+    },
+    "flyway": {
+      "url": "jdbc:postgresql://localhost:5432/coin_system_cloud",
+      "user": "an",
+      "password": "1234"
+    },
+    "blockchain": {
+      "tron": {
+        "fullNode": "https://api.trongrid.io",
+        "solidityNode": "https://api.trongrid.io",
+        "eventServer": "https://api.trongrid.io",
+        "apiKey": ""
+      }
+    },
+    "redis": {
+      "host": "localhost",
+      "port": 6379,
+      "password": ""
+    }
+  },
+  "prod": {
+    "http": {
+      "port": 8080
+    },
+    "database": {
+      "host": "localhost",
+      "port": 5432,
+      "database": "foxya_coin",
+      "user": "postgres",
+      "password": "password",
+      "pool_size": 20
+    },
+    "jwt": {
+      "secret": "your-production-jwt-secret-key-change-this",
+      "access_token_expire_minutes": 30,
+      "refresh_token_expire_minutes": 14400
+    },
+    "blockchain": {
+      "tron": {
+        "fullNode": "https://api.trongrid.io",
+        "solidityNode": "https://api.trongrid.io",
+        "eventServer": "https://api.trongrid.io",
+        "apiKey": ""
+      }
+    },
+    "redis": {
+      "host": "localhost",
+      "port": 6379,
+      "password": ""
+    }
   }
 }
