--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # ==================== PostgreSQL ====================
   postgres:
@@ -33,7 +31,7 @@ services:
   redis:
     image: redis:7-alpine
     container_name: foxya-redis
-    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-}
+    command: redis-server --appendonly yes
     ports:
       - "127.0.0.1:6379:6379"  # 로컬에서만 접근 가능
     volumes:
@@ -41,7 +39,7 @@ services:
     networks:
       - foxya-internal
     healthcheck:
-      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD:-}", "ping"]
+      test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
