[FIX]swagger경로 절대경로 수정

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -49,6 +49,7 @@ COPY --from=builder /build/build/libs/*-fat.jar app.jar
 # 설정 파일 복사
 COPY src/main/resources/config.json /app/config.json
 COPY src/main/resources/log4j2.xml /app/log4j2.xml
+COPY src/main/resources/openapi.yaml /app/openapi.yaml
 
 # 로그 디렉토리 생성 및 권한 설정
 RUN mkdir -p /app/logs && chown -R appuser:appgroup /app
