[FIX]docker-db아닌 외부 Db 쓰게 수정

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,43 +1,15 @@
 services:
-  # ==================== PostgreSQL ====================
-  postgres:
-    image: postgres:15-alpine
-    container_name: foxya-postgres
-    environment:
-      POSTGRES_DB: ${DB_NAME:-foxya_coin}
-      POSTGRES_USER: ${DB_USER:-postgres}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:?Database password required}
-      TZ: Asia/Seoul
-    ports:
-      - "127.0.0.1:5432:5432"  # 로컬에서만 접근 가능
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
-      - ./scripts/init-db.sql:/docker-entrypoint-initdb.d/init.sql:ro
-    networks:
-      - foxya-internal
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres} -d ${DB_NAME:-foxya_coin}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
-    restart: unless-stopped
-    deploy:
-      resources:
-        limits:
-          memory: 1G
-
   # ==================== Redis ====================
   redis:
     image: redis:7-alpine
     container_name: foxya-redis
     command: redis-server --appendonly yes
     ports:
-      - "127.0.0.1:6379:6379"  # 로컬에서만 접근 가능
+      - "127.0.0.1:6379:6379"
     volumes:
       - redis-data:/data
     networks:
-      - foxya-internal
+      - foxya-network
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -58,40 +30,22 @@ services:
         - APP_ENV=${APP_ENV:-prod}
     image: foxya-coin-api:${APP_VERSION:-latest}
     container_name: foxya-api
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     environment:
       TZ: Asia/Seoul
       APP_ENV: ${APP_ENV:-prod}
-      # Database
-      DB_HOST: postgres
-      DB_PORT: 5432
-      DB_NAME: ${DB_NAME:-foxya_coin}
-      DB_USER: ${DB_USER:-postgres}
-      DB_PASSWORD: ${DB_PASSWORD:?Database password required}
-      DB_POOL_SIZE: ${DB_POOL_SIZE:-20}
-      # JWT
-      JWT_SECRET: ${JWT_SECRET:?JWT secret required}
-      JWT_ACCESS_EXPIRE: ${JWT_ACCESS_EXPIRE:-30}
-      JWT_REFRESH_EXPIRE: ${JWT_REFRESH_EXPIRE:-14400}
-      # Redis
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      REDIS_PASSWORD: ${REDIS_PASSWORD:-}
-      # Blockchain
-      TRON_API_KEY: ${TRON_API_KEY:-}
       # JVM
       JAVA_OPTS: ${JAVA_OPTS:--Xmx1024m -Xms512m -XX:+UseG1GC}
     ports:
-      - "8080:8080"  # 외부 접근 허용
+      - "8080:8080"
     volumes:
       - ./logs:/app/logs
     depends_on:
-      postgres:
-        condition: service_healthy
       redis:
         condition: service_healthy
     networks:
-      - foxya-internal
-      - foxya-external
+      - foxya-network
     restart: unless-stopped
     deploy:
       resources:
@@ -118,7 +72,7 @@ services:
     depends_on:
       - app
     networks:
-      - foxya-external
+      - foxya-network
     restart: unless-stopped
     deploy:
       resources:
@@ -126,15 +80,9 @@ services:
           memory: 256M
 
 volumes:
-  postgres-data:
-    driver: local
   redis-data:
     driver: local
 
 networks:
-  foxya-internal:
+  foxya-network:
     driver: bridge
-    internal: true  # 외부 접근 차단
-  foxya-external:
-    driver: bridge
-
