--- a/.env.example
+++ b/.env.example
@@ -8,28 +8,9 @@
 APP_ENV=prod
 APP_VERSION=1.0.0
 
-# ==================== Database ====================
-DB_NAME=coin_system_cloud
-DB_USER=foxya
-DB_PASSWORD=foxya1124!@
-DB_POOL_SIZE=20
-
-# ==================== JWT ====================
-# 최소 32자 이상의 랜덤 문자열 사용 권장
-# 생성 방법: openssl rand -base64 32
-JWT_SECRET=your-jwt-secret-key-for-foxya-coin-service
-JWT_ACCESS_EXPIRE=30
-JWT_REFRESH_EXPIRE=14400
-
-# ==================== Redis ====================
-REDIS_PASSWORD=
-
-# ==================== Blockchain ====================
-TRON_API_KEY=your_trongrid_api_key_here
-
 # ==================== JVM Options ====================
 JAVA_OPTS=-Xmx1024m -Xms512m -XX:+UseG1GC -XX:MaxGCPauseMillis=200
 
-# ==================== SSL (Optional) ====================
-# SSL_CERT_PATH=/path/to/fullchain.pem
-# SSL_KEY_PATH=/path/to/privkey.pem
+# ==================== Note ====================
+# Database, JWT, Redis 설정은 config.json에서 관리합니다.
+# src/main/resources/config.json의 "prod" 섹션을 확인하세요.
