--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -79,7 +79,7 @@
       "port": 8080
     },
     "database": {
-      "host": "host.docker.internal",
+      "host": "localhost",
       "port": 5432,
       "database": "coin_system_cloud",
       "user": "foxya",
@@ -101,7 +101,7 @@
     },
     "redis": {
       "mode": "standalone",
-      "host": "redis",
+      "host": "localhost",
       "port": 6379,
       "password": "",
       "maxPoolSize": 16,
