[FIX]마이그래이션 자동으로 하게 수정

--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -79,7 +79,7 @@
       "port": 8080
     },
     "database": {
-      "host": "172.31.71.66",
+      "host": "postgres",
       "port": 5432,
       "database": "coin_system_cloud",
       "user": "foxya",
