--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,4 +1,31 @@
 services:
+  # ==================== PostgreSQL ====================
+  postgres:
+    image: postgres:15-alpine
+    container_name: foxya-postgres
+    environment:
+      POSTGRES_DB: coin_system_cloud
+      POSTGRES_USER: foxya
+      POSTGRES_PASSWORD: foxya1124!@
+      TZ: Asia/Seoul
+    ports:
+      - "127.0.0.1:5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    networks:
+      - foxya-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U foxya -d coin_system_cloud"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+
   # ==================== Redis ====================
   redis:
     image: redis:7-alpine
@@ -30,8 +57,6 @@ services:
         - APP_ENV=${APP_ENV:-prod}
     image: foxya-coin-api:${APP_VERSION:-latest}
     container_name: foxya-api
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     environment:
       TZ: Asia/Seoul
       APP_ENV: ${APP_ENV:-prod}
@@ -42,6 +67,8 @@ services:
     volumes:
       - ./logs:/app/logs
     depends_on:
+      postgres:
+        condition: service_healthy
       redis:
         condition: service_healthy
     networks:
@@ -80,6 +107,8 @@ services:
           memory: 256M
 
 volumes:
+  postgres-data:
+    driver: local
   redis-data:
     driver: local
 
