--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -96,6 +96,8 @@ services:
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
       - ./nginx/logs:/var/log/nginx
+      # 프론트엔드 빌드 파일 마운트 (프로덕션)
+      # - ./frontend/dist:/usr/share/nginx/html/frontend:ro
     depends_on:
       - app
     networks:
