--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -33,8 +33,8 @@ server {
         add_header Content-Type text/plain;
     }
 
-    # API 프록시
-    location / {
+    # API 프록시 (백엔드 API 요청)
+    location /api/ {
         # Rate Limiting
         limit_req zone=api_limit burst=20 nodelay;
         limit_conn conn_limit 10;
@@ -59,6 +59,20 @@ server {
         proxy_buffer_size 128k;
         proxy_buffers 4 256k;
         proxy_busy_buffers_size 256k;
+    }
+
+    # 프론트엔드 정적 파일 서빙 (프로덕션)
+    # 프론트엔드 빌드 파일을 /usr/share/nginx/html/frontend에 마운트
+    location / {
+        root /usr/share/nginx/html/frontend;
+        index index.html;
+        try_files $uri $uri/ /index.html;
+        
+        # 정적 파일 캐싱
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
     }
 
     # Swagger UI
