--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -33,7 +33,44 @@ server {
         add_header Content-Type text/plain;
     }
 
-    # API 프록시 (백엔드 API 요청)
+    # TRON Service API 프록시 (우선순위: 더 구체적인 경로가 먼저)
+    # /api/login, /api/wallet, /api/balance, /api/transfer 등 TRON 서비스 관련 API
+    location ~ ^/api/(login|logout|wallet|balance|transfer|tx|transactions|deploy|token-stats|config|deployments|transfers) {
+        # Rate Limiting
+        limit_req zone=api_limit burst=20 nodelay;
+        limit_conn conn_limit 10;
+
+        proxy_pass http://tron_service;
+        proxy_http_version 1.1;
+        
+        # 헤더 설정
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Connection "";
+        
+        # 타임아웃 설정
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        
+        # 버퍼링
+        proxy_buffering on;
+        proxy_buffer_size 128k;
+        proxy_buffers 4 256k;
+        proxy_busy_buffers_size 256k;
+    }
+
+    # TRON Service Health Check
+    location /api/health {
+        proxy_pass http://tron_service/api/health;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        access_log off;
+    }
+
+    # API 프록시 (백엔드 API 요청 - 나머지 모든 /api/ 경로)
     location /api/ {
         # Rate Limiting
         limit_req zone=api_limit burst=20 nodelay;
