--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -60,6 +60,11 @@ http {
         server app:8080;
         keepalive 32;
     }
+    
+    upstream tron_service {
+        server tron-service:3000;
+        keepalive 32;
+    }
 
     # 설정 파일 포함
     include /etc/nginx/conf.d/*.conf;
