--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -14,32 +14,29 @@ server {
     }
 }
 
-# HTTPS 서버 블록
+# 메인 서버 블록 (HTTP + HTTPS)
 server {
+    listen 80;
     listen 443 ssl http2;
     server_name _;  # 실제 도메인으로 변경 필요
     
-    # SSL 인증서 설정
+    # SSL 인증서 설정 (인증서가 있을 때만 활성화)
     # Let's Encrypt 인증서 사용 시
-    ssl_certificate /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+    # ssl_certificate /etc/nginx/ssl/fullchain.pem;
+    # ssl_certificate_key /etc/nginx/ssl/privkey.pem;
     
     # 자체 서명 인증서 사용 시 (개발/테스트용)
     # ssl_certificate /etc/nginx/ssl/cert.pem;
     # ssl_certificate_key /etc/nginx/ssl/key.pem;
     
-    # SSL 설정
-    ssl_session_timeout 1d;
-    ssl_session_cache shared:SSL:50m;
-    ssl_session_tickets off;
-    
-    # 최신 TLS 버전만 사용
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-    ssl_prefer_server_ciphers off;
-    
-    # HSTS (HTTP Strict Transport Security)
-    add_header Strict-Transport-Security "max-age=63072000" always;
+    # SSL 설정 (SSL이 활성화된 경우에만 적용)
+    # ssl_session_timeout 1d;
+    # ssl_session_cache shared:SSL:50m;
+    # ssl_session_tickets off;
+    # ssl_protocols TLSv1.2 TLSv1.3;
+    # ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    # ssl_prefer_server_ciphers off;
+    # add_header Strict-Transport-Security "max-age=63072000" always;
 
     # 로그
     access_log /var/log/nginx/foxya_access.log main;
