--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,23 +1,24 @@
-# HTTP → HTTPS 리다이렉트
-server {
-    listen 80;
-    server_name _;  # 모든 도메인
-    
-    # Let's Encrypt 인증서 갱신을 위한 경로 (certbot 사용 시)
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-    
-    # HTTP 요청을 HTTPS로 리다이렉트
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
+# HTTP → HTTPS 리다이렉트 (SSL 인증서가 있을 때만 활성화)
+# server {
+#     listen 80;
+#     server_name _;  # 모든 도메인
+#     
+#     # Let's Encrypt 인증서 갱신을 위한 경로 (certbot 사용 시)
+#     location /.well-known/acme-challenge/ {
+#         root /var/www/certbot;
+#     }
+#     
+#     # HTTP 요청을 HTTPS로 리다이렉트
+#     location / {
+#         return 301 https://$host$request_uri;
+#     }
+# }
 
-# 메인 서버 블록 (HTTP + HTTPS)
+# 메인 서버 블록 (HTTP만 사용 - SSL 인증서가 없을 때)
 server {
     listen 80;
-    listen 443 ssl http2;
+    # SSL 인증서가 있을 때만 아래 주석 해제
+    # listen 443 ssl http2;
     server_name _;  # 실제 도메인으로 변경 필요
     
     # SSL 인증서 설정 (인증서가 있을 때만 활성화)
@@ -56,7 +57,10 @@ server {
         limit_req zone=api_limit burst=20 nodelay;
         limit_conn conn_limit 10;
 
-        proxy_pass http://tron_service;
+        # resolver를 사용하여 동적 DNS 해석
+        resolver 127.0.0.11 valid=30s;
+        set $tron_backend "tron-service:3000";
+        proxy_pass http://$tron_backend;
         proxy_http_version 1.1;
         
         # 헤더 설정
@@ -76,11 +80,16 @@ server {
         proxy_buffer_size 128k;
         proxy_buffers 4 256k;
         proxy_busy_buffers_size 256k;
+        
+        # 에러 처리 (tron-service가 없을 때)
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503;
     }
 
     # TRON Service Health Check
     location /api/health {
-        proxy_pass http://tron_service/api/health;
+        resolver 127.0.0.11 valid=30s;
+        set $tron_backend "tron-service:3000";
+        proxy_pass http://$tron_backend/api/health;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         access_log off;
