--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -61,10 +61,8 @@ http {
         keepalive 32;
     }
     
-    upstream tron_service {
-        server tron-service:3000;
-        keepalive 32;
-    }
+    # tron_service는 location 블록에서 변수로 동적 처리
+    # (nginx가 시작할 때 tron-service가 없어도 시작할 수 있도록)
 
     # 설정 파일 포함
     include /etc/nginx/conf.d/*.conf;
