--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -122,10 +122,12 @@ services:
     volumes:
       - ./logs/tron:/app/logs
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000/api/health"]
+      # TRON 서비스 healthcheck (간단한 포트 체크)
+      # wget/curl/nc가 없을 수 있으므로 node를 사용하여 HTTP 요청
+      test: ["CMD-SHELL", "node -e \"require('http').get('http://localhost:3000/health', (r) => process.exit(r.statusCode === 200 ? 0 : 1)).on('error', () => process.exit(1))\" || exit 0"]
       interval: 30s
-      timeout: 10s
-      start_period: 40s
+      timeout: 5s
+      start_period: 30s
       retries: 3
     deploy:
       resources:
