--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -57,8 +57,7 @@ server {
         limit_req zone=api_limit burst=20 nodelay;
         limit_conn conn_limit 10;
 
-        # resolver를 사용하여 동적 DNS 해석
-        resolver 127.0.0.11 valid=30s;
+        # 동적 DNS 해석 (http 블록의 resolver 사용)
         set $tron_backend "tron-service:3000";
         proxy_pass http://$tron_backend;
         proxy_http_version 1.1;
@@ -87,7 +86,7 @@ server {
 
     # TRON Service Health Check
     location /api/health {
-        resolver 127.0.0.11 valid=30s;
+        # 동적 DNS 해석 (http 블록의 resolver 사용)
         set $tron_backend "tron-service:3000";
         proxy_pass http://$tron_backend/api/health;
         proxy_http_version 1.1;
