--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,6 +13,9 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
+    # Docker 내부 DNS resolver 설정 (컨테이너 이름 동적 해석)
+    resolver 127.0.0.11 valid=30s ipv6=off;
+
     # 로그 포맷
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
