--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -57,9 +57,7 @@ server {
         limit_req zone=api_limit burst=20 nodelay;
         limit_conn conn_limit 10;
 
-        # 동적 DNS 해석 (http 블록의 resolver 사용)
-        set $tron_backend "tron-service:3000";
-        proxy_pass http://$tron_backend;
+        proxy_pass http://tron_service;
         proxy_http_version 1.1;
         
         # 헤더 설정
@@ -86,9 +84,7 @@ server {
 
     # TRON Service Health Check
     location /api/health {
-        # 동적 DNS 해석 (http 블록의 resolver 사용)
-        set $tron_backend "tron-service:3000";
-        proxy_pass http://$tron_backend/api/health;
+        proxy_pass http://tron_service/api/health;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         access_log off;
