--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -64,8 +64,12 @@ http {
         keepalive 32;
     }
     
-    # tron_service는 location 블록에서 변수로 동적 처리
-    # (nginx가 시작할 때 tron-service가 없어도 시작할 수 있도록)
+    # tron_service upstream (nginx가 시작할 때 tron-service가 없어도 시작 가능하도록)
+    # resolver를 사용하여 동적 DNS 해석
+    upstream tron_service {
+        server tron-service:3000 max_fails=3 fail_timeout=30s;
+        keepalive 32;
+    }
 
     # 설정 파일 포함
     include /etc/nginx/conf.d/*.conf;
