--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,20 +1,21 @@
-# HTTP → HTTPS 리다이렉트 (SSL 인증서가 있을 때만 활성화)
-# server {
-#     listen 80;
-#     server_name _;  # 모든 도메인
-#     
-#     # Let's Encrypt 인증서 갱신을 위한 경로 (certbot 사용 시)
-#     location /.well-known/acme-challenge/ {
-#         root /var/www/certbot;
-#     }
-#     
-#     # HTTP 요청을 HTTPS로 리다이렉트
-#     location / {
-#         return 301 https://$host$request_uri;
-#     }
-# }
+# HTTP → HTTPS 리다이렉트
+server {
+    listen 80;
+    server_name _;  # 모든 도메인
+    
+    # Let's Encrypt 인증서 갱신을 위한 경로 (certbot 사용 시)
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+    
+    # HTTP 요청을 HTTPS로 리다이렉트 (SSL 인증서가 있을 때만 활성화)
+    # SSL 인증서가 없으면 아래 주석 처리
+    # location / {
+    #     return 301 https://$host$request_uri;
+    # }
+}
 
-# 메인 서버 블록 (HTTP만 사용 - SSL 인증서가 없을 때)
+# 메인 서버 블록 (HTTP + HTTPS)
 server {
     listen 80;
     # SSL 인증서가 있을 때만 아래 주석 해제
@@ -77,9 +78,6 @@ server {
         proxy_buffer_size 128k;
         proxy_buffers 4 256k;
         proxy_busy_buffers_size 256k;
-        
-        # 에러 처리 (tron-service가 없을 때)
-        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503;
     }
 
     # TRON Service Health Check
@@ -170,4 +168,3 @@ server {
         internal;
     }
 }
-
