[FIX]nginx ssl적용

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -8,37 +8,35 @@ server {
         root /var/www/certbot;
     }
     
-    # HTTP 요청을 HTTPS로 리다이렉트 (SSL 인증서가 있을 때만 활성화)
-    # SSL 인증서가 없으면 아래 주석 처리
-    # location / {
-    #     return 301 https://$host$request_uri;
-    # }
+    # HTTP 요청을 HTTPS로 리다이렉트
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 # 메인 서버 블록 (HTTP + HTTPS)
 server {
     listen 80;
-    # SSL 인증서가 있을 때만 아래 주석 해제
-    # listen 443 ssl http2;
+    listen 443 ssl http2;
     server_name _;  # 실제 도메인으로 변경 필요
     
-    # SSL 인증서 설정 (인증서가 있을 때만 활성화)
+    # SSL 인증서 설정
     # Let's Encrypt 인증서 사용 시
     # ssl_certificate /etc/nginx/ssl/fullchain.pem;
     # ssl_certificate_key /etc/nginx/ssl/privkey.pem;
     
     # 자체 서명 인증서 사용 시 (개발/테스트용)
-    # ssl_certificate /etc/nginx/ssl/cert.pem;
-    # ssl_certificate_key /etc/nginx/ssl/key.pem;
+    ssl_certificate /etc/nginx/ssl/cert.pem;
+    ssl_certificate_key /etc/nginx/ssl/key.pem;
     
-    # SSL 설정 (SSL이 활성화된 경우에만 적용)
-    # ssl_session_timeout 1d;
-    # ssl_session_cache shared:SSL:50m;
-    # ssl_session_tickets off;
-    # ssl_protocols TLSv1.2 TLSv1.3;
-    # ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-    # ssl_prefer_server_ciphers off;
-    # add_header Strict-Transport-Security "max-age=63072000" always;
+    # SSL 설정
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_tickets off;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+    add_header Strict-Transport-Security "max-age=63072000" always;
 
     # 로그
     access_log /var/log/nginx/foxya_access.log main;
