--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -8,7 +8,33 @@ server {
         root /var/www/certbot;
     }
     
-    # HTTP 요청을 HTTPS로 리다이렉트
+    # TRON 서비스 API는 HTTPS 리다이렉트 하지 않음 (3000포트 관련 요청)
+    location ~ ^/api/(login|logout|wallet|balance|transfer|tx|transactions|deploy|token-stats|config|deployments|transfers|health) {
+        # TRON 서비스로 직접 프록시 (HTTPS 리다이렉트 없음)
+        proxy_pass http://tron_service;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Connection "";
+        
+        # 타임아웃 설정
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        
+        # 버퍼링
+        proxy_buffering on;
+        proxy_buffer_size 128k;
+        proxy_buffers 4 256k;
+        proxy_busy_buffers_size 256k;
+        
+        # 에러 처리
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503;
+    }
+    
+    # HTTP 요청을 HTTPS로 리다이렉트 (TRON 서비스 제외)
     location / {
         return 301 https://$host$request_uri;
     }
