도메인 관련설정 추가

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 # HTTP → HTTPS 리다이렉트
 server {
     listen 80;
-    server_name _;  # 모든 도메인
+    server_name korion.io.kr www.korion.io.kr api.korion.io.kr dev.korion.io.kr _;  # 도메인 및 모든 호스트 허용 (IP 접근 가능)
     
     # Let's Encrypt 인증서 갱신을 위한 경로 (certbot 사용 시)
     location /.well-known/acme-challenge/ {
@@ -44,7 +44,7 @@ server {
 server {
     listen 80;
     listen 443 ssl http2;
-    server_name _;  # 실제 도메인으로 변경 필요
+    server_name korion.io.kr www.korion.io.kr api.korion.io.kr dev.korion.io.kr;  # 도메인 명시 (IP로도 접근 가능하도록 설정)
     
     # SSL 인증서 설정
     # Let's Encrypt 인증서 사용 시
