[ADD]문의하기 페이지 추가

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -48,12 +48,12 @@ server {
     
     # SSL 인증서 설정
     # Let's Encrypt 인증서 사용 시
-    # ssl_certificate /etc/nginx/ssl/fullchain.pem;
-    # ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+    ssl_certificate /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
     
-    # 자체 서명 인증서 사용 시 (개발/테스트용)
-    ssl_certificate /etc/nginx/ssl/cert.pem;
-    ssl_certificate_key /etc/nginx/ssl/key.pem;
+    # 자체 서명 인증서 사용 시 (개발/테스트용) - 주석 처리
+    # ssl_certificate /etc/nginx/ssl/cert.pem;
+    # ssl_certificate_key /etc/nginx/ssl/key.pem;
     
     # SSL 설정
     ssl_session_timeout 1d;
