--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -179,6 +179,17 @@ server {
         proxy_set_header Host $host;
     }
 
+    # Prometheus Metrics Endpoint
+    location /metrics {
+        proxy_pass http://foxya_api/metrics;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        # 메트릭은 인증 없이 접근 가능 (필요시 IP 제한 추가)
+    }
+
     # 정적 파일 캐싱 (필요 시)
     # location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2)$ {
     #     expires 1y;
