[FIX] config에 api 키 추가

--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -56,6 +56,9 @@
       "starttls": "REQUIRED",
       "login": "LOGIN",
       "authMethods": "PLAIN"
+    },
+    "monitoring": {
+      "apiKey": "your-secret-monitoring-key-here"
     }
   },
   "local-cluster": {
@@ -120,6 +123,9 @@
       "starttls": "REQUIRED",
       "login": "LOGIN",
       "authMethods": "PLAIN"
+    },
+    "monitoring": {
+      "apiKey": "your-secret-monitoring-key-here"
     }
   },
   "prod": {
@@ -178,6 +184,9 @@
       "starttls": "REQUIRED",
       "login": "LOGIN",
       "authMethods": "PLAIN"
+    },
+    "monitoring": {
+      "apiKey": "your-secret-monitoring-key-here"
     }
   },
   "prod-sentinel": {
@@ -240,6 +249,9 @@
       "starttls": "REQUIRED",
       "login": "LOGIN",
       "authMethods": "PLAIN"
+    },
+    "monitoring": {
+      "apiKey": "your-secret-monitoring-key-here"
     }
   }
 }
