--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -190,6 +190,35 @@ server {
         # 메트릭은 인증 없이 접근 가능 (필요시 IP 제한 추가)
     }
 
+    # 모니터링 페이지 프록시 (Grafana, Prometheus)
+    # /6s9ex74204 경로를 백엔드로 프록시 (프론트엔드 라우터보다 우선)
+    location /6s9ex74204 {
+        proxy_pass http://foxya_api;
+        proxy_http_version 1.1;
+        
+        # 헤더 설정
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Connection "";
+        
+        # WebSocket 지원 (Grafana에서 필요할 수 있음)
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        
+        # 타임아웃 설정
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        
+        # 버퍼링
+        proxy_buffering on;
+        proxy_buffer_size 128k;
+        proxy_buffers 4 256k;
+        proxy_busy_buffers_size 256k;
+    }
+
     # 정적 파일 캐싱 (필요 시)
     # location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2)$ {
     #     expires 1y;
