[FIX] granaa 타임아웃증가

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -207,16 +207,19 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         
-        # 타임아웃 설정
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        # 타임아웃 설정 (Grafana 초기 로드에 시간이 걸릴 수 있으므로 증가)
+        proxy_connect_timeout 120s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
         
         # 버퍼링
         proxy_buffering on;
         proxy_buffer_size 128k;
         proxy_buffers 4 256k;
         proxy_busy_buffers_size 256k;
+        
+        # 에러 처리
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
     }
 
     # 정적 파일 캐싱 (필요 시)
